--- a/index.html
+++ b/index.html
@@ -25,19 +25,13 @@
 
     <body class="">
 
-        <div class="picBG">
-            <div class="container ">
-                <div class="row py-4 ">
-                    <div class="col-12 d-flex justify-content-center ">
-                        <text class="align-middle textMain text-light">Minecraft Jukebox</text>
-                    </div>
+        <div class="container ">
+            <div class="row py-4 ">
+                <div class="col-12 d-flex justify-content-center ">
+                    <text class="align-middle textMain ">Minecraft Jukebox</text>
                 </div>
             </div>
         </div>
-
-
-
-
     </body>
 
 
