music progress bar basic

--- a/index.html
+++ b/index.html
@@ -32,6 +32,33 @@
                 </div>
             </div>
         </div>
+
+        <!-- now playing bar -->
+        
+        <div class="nowPlaying ">
+
+            <div class="progress">
+                <div class="progress-bar bg-red" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+
+
+            <div class="container-fluid p-3 pt-3">
+                <div class="row">
+
+                    <div class="col-2">
+                        <span class="me-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="currentColor"
+                                class="bi bi-play-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393" />
+                            </svg>
+                        </span>
+                        <text class="align-middle fs-5">Pigstep</text>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 
 
