--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="nowPlaying ">
 
             <div class="progress">
-                <div class="progress-bar bg-red" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="progress-bar" class="progress-bar bg-red" role="progressbar"  aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
 
 
