loading bar basic - buttons/name

--- a/index.html
+++ b/index.html
@@ -34,30 +34,75 @@
         </div>
 
         <!-- now playing bar -->
-        
+
         <div class="nowPlaying ">
 
             <div class="progress">
-                <div id="progress-bar" class="progress-bar bg-red" role="progressbar"  aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="progress-bar" class="progress-bar bg-red" role="progressbar" aria-valuenow="0"
+                    aria-valuemin="0" aria-valuemax="100"></div>
             </div>
 
 
-            <div class="container-fluid p-3 pt-3">
-                <div class="row">
+            <div class="container-fluid p-2 px-3">
+                <div class="row ">
 
-                    <div class="col-2">
-                        <span class="me-2">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="currentColor"
-                                class="bi bi-play-fill" viewBox="0 0 16 16">
+                    <div class="col-4 ">
+                        <div style="display: inline-block;" cl>
+
+                            <text class="align-middle music-name">Block</text>
+                            <text class="align-middle music-by">by C418</text>
+
+                        </div>
+
+                    </div>
+
+
+
+
+                    <div class="col-4 d-flex justify-content-center align-middle">
+
+
+                        <div class="mx-1">
+                            <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
+                                fill="currentColor" class="bi bi-skip-backward-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M.5 3.5A.5.5 0 0 0 0 4v8a.5.5 0 0 0 1 0V8.753l6.267 3.636c.54.313 1.233-.066 1.233-.697v-2.94l6.267 3.636c.54.314 1.233-.065 1.233-.696V4.308c0-.63-.693-1.01-1.233-.696L8.5 7.248v-2.94c0-.63-.692-1.01-1.233-.696L1 7.248V4a.5.5 0 0 0-.5-.5" />
+                            </svg>
+
+
+                        </div>
+
+
+                        <div class="mx-1">
+                            <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="3.2em" height="100%"
+                                fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
                                 <path
                                     d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393" />
                             </svg>
-                        </span>
-                        <text class="align-middle fs-5">Pigstep</text>
+                        </div>
+
+
+                        <div class="mx-1">
+                            <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
+                                fill="currentColor" class="bi bi-skip-forward-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M15.5 3.5a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V8.753l-6.267 3.636c-.54.313-1.233-.066-1.233-.697v-2.94l-6.267 3.636C.693 12.703 0 12.324 0 11.693V4.308c0-.63.693-1.01 1.233-.696L7.5 7.248v-2.94c0-.63.693-1.01 1.233-.696L15 7.248V4a.5.5 0 0 1 .5-.5" />
+                            </svg>
+
+
+
+                        </div>
+
 
                     </div>
+
+
+
+
                 </div>
+
             </div>
+        </div>
         </div>
     </body>
 
