--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <body class="">
 
+        <!-- title -->
         <div class="container ">
             <div class="row py-4 ">
                 <div class="col-12 d-flex justify-content-center ">
@@ -34,7 +35,6 @@
         </div>
 
         <!-- now playing bar -->
-
         <div class="nowPlaying ">
 
             <div class="progress">
@@ -42,12 +42,11 @@
                     aria-valuemin="0" aria-valuemax="100"></div>
             </div>
 
-
             <div class="container-fluid p-2 px-3">
                 <div class="row ">
 
                     <div class="col-4 ">
-                        <div style="display: inline-block;" cl>
+                        <div style="display: inline-block;">
 
                             <text class="align-middle music-name">Block</text>
                             <text class="align-middle music-by">by C418</text>
@@ -75,14 +74,14 @@
 
                         <div class="mx-1" onclick="togglePlayPause()">
 
-                            <svg id="play" class="align-middle" xmlns="http://www.w3.org/2000/svg" width="3.2em" height="100%"
-                                fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
+                            <svg id="play" class="align-middle" xmlns="http://www.w3.org/2000/svg" width="3.2em"
+                                height="100%" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
                                 <path
                                     d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393" />
                             </svg>
 
-                            <svg id="pause" class="align-middle d-none" xmlns="http://www.w3.org/2000/svg" width="3.2em" height="100%"
-                                fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16">
+                            <svg id="pause" class="align-middle d-none" xmlns="http://www.w3.org/2000/svg" width="3.2em"
+                                height="100%" fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16">
                                 <path
                                     d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5m5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5" />
                             </svg>
@@ -111,7 +110,44 @@
 
             </div>
         </div>
+
+
+        <!-- music cards -->
+
+        <div class="container">
+
+            <div class="col-3 musicCard">
+
+                <div class="d-flex justify-content-between">
+                    <div style="display: inline-block;" class="d-flex flex-column align-items-center my-auto ms-3 ">
+
+                        <text class="musicCard-name me-auto">Creator</text>
+                        <text class="musicCard-by me-auto">by Lenie Raine</text>
+
+                    </div>
+
+
+                    <div style="display: inline-block;" class="d-flex align-items-center mx-2">
+
+                        <img class="musicCardImg ms-auto" src="images/disc_creator.png" alt="">
+
+                    </div>
+
+                </div>
+
+
+
+                <div>
+                    <text class="align-middle fs-4">Play</text>
+                </div>
+
+            </div>
+
         </div>
+
+
+
+
     </body>
 
 
