audio playing attempt
this has failed...will now try with audio html element way

--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
 
 
                 <div class="text-center py-2">
-                    <div style="display: inline-block;" class="fs-4 px-3  rounded-2 musciCardPlay" onclick="play()">Play</div>
-                    <audio id="creator" src="creator.mp3"></audio>
+                    <div style="display: inline-block;" class="fs-4 px-3  rounded-2 musciCardPlay" onclick="">Play</div>
                 </div>
 
             </div>
