--- a/index.html
+++ b/index.html
@@ -116,9 +116,14 @@
 
         <div class="container">
 
-            <div class="col-3 musicCard rounded-3 pb-2">
+            <div class="col-2 musicCard rounded-3 pb-2">
 
-                <div class="d-flex justify-content-between">
+                <div class="d-flex flex-column justify-content-center">
+
+                    <img class="musicCardImg mx-auto " src="pixil-frame-0-9.png" alt="">
+
+
+
                     <div style="display: inline-block;" class="d-flex flex-column align-items-center my-auto ms-3 ">
 
                         <text class="musicCard-name me-auto">Creator</text>
@@ -128,14 +133,7 @@
 
 
 
-                    <img class="musicCardImg justify-self-end mx-2 " src="images/disc_creator.png" alt="">
 
-
-                </div>
-
-
-
-                <div class="text-center py-2">
                     <div style="display: inline-block;" class="fs-4 px-3  rounded-2 musciCardPlay" onclick="">Play</div>
                 </div>
 
