music card revamp

--- a/index.html
+++ b/index.html
@@ -120,21 +120,22 @@
 
                 <div class="d-flex flex-column justify-content-center">
 
-                    <img class="musicCardImg mx-auto " src="pixil-frame-0-9.png" alt="">
+                    <img class="musicCardImg mx-auto " src="images/disc_creator.png " alt="">
 
 
 
-                    <div style="display: inline-block;" class="d-flex flex-column align-items-center my-auto ms-3 ">
+                    <div class="d-flex flex-column justify-content-center align-items-center mb-2">
 
-                        <text class="musicCard-name me-auto">Creator</text>
-                        <text class="musicCard-by me-auto">by Lenie Raine</text>
+                        <text class="musicCard-name">Creator</text>
+                        <text class="musicCard-by">Lenie Raine</text>
 
                     </div>
 
+                    <div class="text-center justify-content-center d-flex my-2">
+                        <p style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
+                            onclick="">Play</p>
 
-
-
-                    <div style="display: inline-block;" class="fs-4 px-3  rounded-2 musciCardPlay" onclick="">Play</div>
+                    </div>
                 </div>
 
             </div>
