playing bar song name updates

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <div class="col-4 ">
                         <div style="display: inline-block;">
 
-                            <text class="align-middle music-name">Block</text>
-                            <text class="align-middle music-by">by C418</text>
+                            <text id="nowPlayingDiscName" class="align-middle music-name">Block</text>
+                            <text id="nowPlayingByName" class="align-middle music-by">by C418</text>
 
                         </div>
 
@@ -136,7 +136,7 @@
 
                         <div class="text-center justify-content-center  d-flex my-2">
                             <p style="width: fit-content" class="fs-4 px-3 mx-0 my-auto rounded-2 musciCardPlay  text-center"
-                                onclick="play('creator')">Play</p>
+                                onclick="play('Creator')">Play</p>
 
                         </div>
                     </div>
@@ -162,7 +162,7 @@
 
                         <div class="text-center justify-content-center d-flex my-2">
                             <p style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
-                                onclick="play('creator_music_box')">Play</p>
+                                onclick="play('Creator (Music Box)')">Play</p>
 
                         </div>
                     </div>
@@ -187,7 +187,7 @@
 
                         <div class="text-center justify-content-center d-flex my-2">
                             <p style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
-                                onclick="play('precipice')">Play</p>
+                                onclick="play('Precipice')">Play</p>
 
                         </div>
                     </div>
@@ -212,7 +212,7 @@
 
                         <div class="text-center justify-content-center d-flex my-2">
                             <p style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
-                                onclick="play('relic')">Play</p>
+                                onclick="play('Relic')">Play</p>
 
                         </div>
                     </div>
