--- a/index.html
+++ b/index.html
@@ -72,15 +72,19 @@
                         </div>
 
 
-                        <div class="mx-1" onclick="togglePlayPause()">
+                        <div class="mx-1 d-none" onclick="playBar()" id="play">
 
-                            <svg id="play" class="align-middle" xmlns="http://www.w3.org/2000/svg" width="3.2em"
+                            <svg   class="align-middle" xmlns="http://www.w3.org/2000/svg" width="3.2em"
                                 height="100%" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
                                 <path
                                     d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393" />
                             </svg>
 
-                            <svg id="pause" class="align-middle d-none" xmlns="http://www.w3.org/2000/svg" width="3.2em"
+                        </div>
+
+
+                        <div class="mx-1 " onclick="pauseBar()" id="pause">
+                            <svg  class="align-middle " xmlns="http://www.w3.org/2000/svg" width="3.2em"
                                 height="100%" fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16">
                                 <path
                                     d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5m5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5" />
