--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="col-4 d-flex justify-content-center align-middle">
 
 
-                        <div class="mx-1">
+                        <div class="mx-1" onclick="previousTrackBar()" id="previousTrackBar">
                             <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
                                 fill="currentColor" class="bi bi-skip-backward-fill" viewBox="0 0 16 16">
                                 <path
@@ -93,7 +93,7 @@
                         </div>
 
 
-                        <div class="mx-1">
+                        <div class="mx-1" onclick="nextTrackBar()" id="nextTrackBar">
                             <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
                                 fill="currentColor" class="bi bi-skip-forward-fill" viewBox="0 0 16 16">
                                 <path
@@ -120,10 +120,10 @@
 
         <div class="container">
 
-            <div class="row justify-content-evenly ">
+            <div class="row d-flex justify-content-center ">
 
                 <!-- creator -->
-                <div class="col-2 musicCard rounded-3 pb-2">
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -139,8 +139,8 @@
                         </div>
 
                         <div class="text-center justify-content-center  d-flex my-2">
-                            <p style="width: fit-content" class="fs-4 px-3 mx-0 my-auto rounded-2 musciCardPlay  text-center"
-                                onclick="play('Creator')">Play</p>
+                            <p id="CreatorPlay" style="width: fit-content" class="fs-4 px-3 mx-0 my-auto rounded-2 musciCardPlay text-center"
+                                onclick="play('Creator')" disabled >Play</p>
 
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                 </div>
 
                 <!-- creator_music_box -->
-                <div class="col-2 musicCard rounded-3 pb-2">
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -165,7 +165,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
+                            <p id="Creator (Music Box)Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
                                 onclick="play('Creator (Music Box)')">Play</p>
 
                         </div>
@@ -174,7 +174,7 @@
                 </div>
 
                 <!-- precipice -->
-                <div class="col-2 musicCard rounded-3 pb-2">
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -190,7 +190,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
+                            <p id="PrecipicePlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
                                 onclick="play('Precipice')">Play</p>
 
                         </div>
@@ -199,7 +199,7 @@
                 </div>
 
                 <!-- relic -->
-                <div class="col-2 musicCard rounded-3 pb-2">
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -214,8 +214,8 @@
 
                         </div>
 
-                        <div class="text-center justify-content-center d-flex my-2">
-                            <p style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
+                        <div class="text-center  justify-content-center d-flex my-2">
+                            <p id="RelicPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
                                 onclick="play('Relic')">Play</p>
 
                         </div>
@@ -224,7 +224,7 @@
                 </div>
 
                 <!-- 5 -->
-                <div class="col-2 musicCard rounded-3 pb-2">
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -240,8 +240,357 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
+                            <p id="5Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
                                 onclick="play('5')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Otherside -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_otherside.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Otherside</text>
+                            <text class="musicCard-by">Lena Raine</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="OthersidePlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Otherside')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Pigstep -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_pigstep.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Pigstep</text>
+                            <text class="musicCard-by">Lena Raine</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="PigstepPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Pigstep')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Cat -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_cat.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Cat</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="CatPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Cat')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Chirp -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_chirp.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Chirp</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="ChirpPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Chirp')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Blocks -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_blocks.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Blocks</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="BlocksPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Blocks')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+                
+                <!-- Mall -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_mall.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Mall</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="MallPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Mall')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Mellohi -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_mellohi.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Mellohi</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="MellohiPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Mellohi')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Far -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_far.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Far</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="FarPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Far')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Stal -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_stal.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Stal</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="StalPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Stal')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Straid -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_strad.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Strad</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="StradPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Strad')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Wait -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_wait.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Wait</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="WaitPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Wait')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Ward -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_ward.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">Ward</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="WardPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('Ward')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- 11 -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_11.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">11</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="11Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('11')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+                <!-- 13 -->
+                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg mx-auto " src="images/disc_13.png " alt="">
+
+
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name text-center">13</text>
+                            <text class="musicCard-by">C418</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center d-flex my-2">
+                            <p id="13Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                                onclick="play('13')">Play</p>
 
                         </div>
                     </div>
@@ -250,8 +599,11 @@
 
 
 
-
             </div>
+        </div>
+
+        <div style="height: 7em;">
+
         </div>
 
 
@@ -268,9 +620,9 @@
         <audio id="otherside" src="music/otherside.mp3"></audio>
         <audio id="pigstep" src="music/pigstep.mp3"></audio>
         <audio id="precipice" src="music/precipice.mp3"></audio>
-        <audio id="record" src="music/record.mp3"></audio>
+        <audio id="far" src="music/far.mp3"></audio>
         <audio id="relic" src="music/relic.mp3"></audio>
-        <audio id="stall" src="music/stall.mp3"></audio>
+        <audio id="stal" src="music/stal.mp3"></audio>
         <audio id="strad" src="music/strad.mp3"></audio>
         <audio id="wait" src="music/wait.mp3"></audio>
         <audio id="ward" src="music/ward.mp3"></audio>
