--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <!-- now playing bar -->
-        <div class="nowPlaying ">
+        <div id="nowPlaying" class="nowPlaying shadow-lg d-none" >
 
             <div class="progress">
                 <div id="progress-bar" class="progress-bar bg-red" role="progressbar" aria-valuenow="0"
