QOL chanes, bug fixes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
 
 
-                        <div class="mx-1 d-none" onclick="playBar()" id="play">
+                        <div class="mx-1" onclick="playBar()" id="play">
 
                             <svg   class="align-middle" xmlns="http://www.w3.org/2000/svg" width="3.2em"
                                 height="100%" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
@@ -83,7 +83,7 @@
                         </div>
 
 
-                        <div class="mx-1 " onclick="pauseBar()" id="pause">
+                        <div class="mx-1  d-none" onclick="pauseBar()" id="pause">
                             <svg  class="align-middle " xmlns="http://www.w3.org/2000/svg" width="3.2em"
                                 height="100%" fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16">
                                 <path
@@ -123,7 +123,7 @@
             <div class="row d-flex justify-content-center ">
 
                 <!-- creator -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -139,7 +139,7 @@
                         </div>
 
                         <div class="text-center justify-content-center  d-flex my-2">
-                            <p id="CreatorPlay" style="width: fit-content" class="fs-4 px-3 mx-0 my-auto rounded-2 musciCardPlay text-center"
+                            <p id="CreatorPlay" style="width: fit-content" class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
                                 onclick="play('Creator')" disabled >Play</p>
 
                         </div>
@@ -148,7 +148,7 @@
                 </div>
 
                 <!-- creator_music_box -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -165,7 +165,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="Creator (Music Box)Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
+                            <p id="Creator (Music Box)Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center"
                                 onclick="play('Creator (Music Box)')">Play</p>
 
                         </div>
@@ -174,7 +174,7 @@
                 </div>
 
                 <!-- precipice -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -190,7 +190,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="PrecipicePlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
+                            <p id="PrecipicePlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center"
                                 onclick="play('Precipice')">Play</p>
 
                         </div>
@@ -199,7 +199,7 @@
                 </div>
 
                 <!-- relic -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -215,7 +215,7 @@
                         </div>
 
                         <div class="text-center  justify-content-center d-flex my-2">
-                            <p id="RelicPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
+                            <p id="RelicPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center"
                                 onclick="play('Relic')">Play</p>
 
                         </div>
@@ -224,7 +224,7 @@
                 </div>
 
                 <!-- 5 -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -240,7 +240,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="5Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay  text-center"
+                            <p id="5Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center"
                                 onclick="play('5')">Play</p>
 
                         </div>
@@ -249,7 +249,7 @@
                 </div>
 
                 <!-- Otherside -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -265,7 +265,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="OthersidePlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="OthersidePlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Otherside')">Play</p>
 
                         </div>
@@ -274,7 +274,7 @@
                 </div>
 
                 <!-- Pigstep -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -290,7 +290,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="PigstepPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="PigstepPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Pigstep')">Play</p>
 
                         </div>
@@ -299,7 +299,7 @@
                 </div>
 
                 <!-- Cat -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -315,7 +315,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="CatPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="CatPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Cat')">Play</p>
 
                         </div>
@@ -324,7 +324,7 @@
                 </div>
 
                 <!-- Chirp -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -340,7 +340,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="ChirpPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="ChirpPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Chirp')">Play</p>
 
                         </div>
@@ -349,7 +349,7 @@
                 </div>
 
                 <!-- Blocks -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -365,7 +365,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="BlocksPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="BlocksPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Blocks')">Play</p>
 
                         </div>
@@ -374,7 +374,7 @@
                 </div>
                 
                 <!-- Mall -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -390,7 +390,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="MallPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="MallPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Mall')">Play</p>
 
                         </div>
@@ -399,7 +399,7 @@
                 </div>
 
                 <!-- Mellohi -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -415,7 +415,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="MellohiPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="MellohiPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Mellohi')">Play</p>
 
                         </div>
@@ -424,7 +424,7 @@
                 </div>
 
                 <!-- Far -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -440,7 +440,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="FarPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="FarPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Far')">Play</p>
 
                         </div>
@@ -449,7 +449,7 @@
                 </div>
 
                 <!-- Stal -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -465,7 +465,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="StalPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="StalPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Stal')">Play</p>
 
                         </div>
@@ -474,7 +474,7 @@
                 </div>
 
                 <!-- Straid -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -490,7 +490,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="StradPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="StradPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Strad')">Play</p>
 
                         </div>
@@ -499,7 +499,7 @@
                 </div>
 
                 <!-- Wait -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -515,7 +515,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="WaitPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="WaitPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Wait')">Play</p>
 
                         </div>
@@ -524,7 +524,7 @@
                 </div>
 
                 <!-- Ward -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -540,7 +540,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="WardPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="WardPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('Ward')">Play</p>
 
                         </div>
@@ -549,7 +549,7 @@
                 </div>
 
                 <!-- 11 -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -565,7 +565,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="11Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="11Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('11')">Play</p>
 
                         </div>
@@ -573,7 +573,7 @@
 
                 </div>
                 <!-- 13 -->
-                <div class="col-2 musicCard rounded-3 pb-2 m-2">
+                <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -589,7 +589,7 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="13Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-2 musciCardPlay text-center"
+                            <p id="13Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
                                 onclick="play('13')">Play</p>
 
                         </div>
