--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <!-- now playing bar -->
-        <div id="nowPlaying" class="nowPlaying shadow-lg d-none" >
+        <div id="nowPlaying" class="nowPlaying shadow-lg ">
 
             <div class="progress">
                 <div id="progress-bar" class="progress-bar bg-red" role="progressbar" aria-valuenow="0"
@@ -61,6 +61,20 @@
                     <div class="col-4 d-flex justify-content-center align-middle">
 
 
+
+                        <div class="mx-2" onclick="backward10()" id="nextTrackBar">
+                            <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="100%"
+                                fill="currentColor" class="bi bi-skip-forward-fill" viewBox="0 0 512 512">
+                                <path
+                                    d="M48.5 224L40 224c-13.3 0-24-10.7-24-24L16 72c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2L98.6 96.6c87.6-86.5 228.7-86.2 315.8 1c87.5 87.5 87.5 229.3 0 316.8s-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3c-62.2-62.2-162.7-62.5-225.3-1L185 183c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8L48.5 224z" />
+                            </svg>
+
+
+
+
+                        </div>
+
+
                         <div class="mx-1" onclick="previousTrackBar()" id="previousTrackBar">
                             <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
                                 fill="currentColor" class="bi bi-skip-backward-fill" viewBox="0 0 16 16">
@@ -74,8 +88,8 @@
 
                         <div class="mx-1" onclick="playBar()" id="play">
 
-                            <svg   class="align-middle" xmlns="http://www.w3.org/2000/svg" width="3.2em"
-                                height="100%" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
+                            <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="3.2em" height="100%"
+                                fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
                                 <path
                                     d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393" />
                             </svg>
@@ -84,8 +98,8 @@
 
 
                         <div class="mx-1  d-none" onclick="pauseBar()" id="pause">
-                            <svg  class="align-middle " xmlns="http://www.w3.org/2000/svg" width="3.2em"
-                                height="100%" fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16">
+                            <svg class="align-middle " xmlns="http://www.w3.org/2000/svg" width="3.2em" height="100%"
+                                fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16">
                                 <path
                                     d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5m5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5" />
                             </svg>
@@ -99,7 +113,14 @@
                                 <path
                                     d="M15.5 3.5a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V8.753l-6.267 3.636c-.54.313-1.233-.066-1.233-.697v-2.94l-6.267 3.636C.693 12.703 0 12.324 0 11.693V4.308c0-.63.693-1.01 1.233-.696L7.5 7.248v-2.94c0-.63.693-1.01 1.233-.696L15 7.248V4a.5.5 0 0 1 .5-.5" />
                             </svg>
+                        </div>
 
+                        <div class="mx-2" onclick="forward10()" id="nextTrackBar">
+                            <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="100%"
+                                fill="currentColor" class="bi bi-skip-forward-fill" viewBox="0 0 512 512">
+                                <path
+                                    d="M463.5 224l8.5 0c13.3 0 24-10.7 24-24l0-128c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2L413.4 96.6c-87.6-86.5-228.7-86.2-315.8 1c-87.5 87.5-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3c62.2-62.2 162.7-62.5 225.3-1L327 183c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8l119.5 0z" />
+                            </svg>
 
 
                         </div>
@@ -139,8 +160,9 @@
                         </div>
 
                         <div class="text-center justify-content-center  d-flex my-2">
-                            <p id="CreatorPlay" style="width: fit-content" class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
-                                onclick="play('Creator')" disabled >Play</p>
+                            <p id="CreatorPlay" style="width: fit-content"
+                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
+                                onclick="play('Creator')" disabled>Play</p>
 
                         </div>
                     </div>
@@ -165,7 +187,8 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="Creator (Music Box)Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center"
+                            <p id="Creator (Music Box)Play" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center"
                                 onclick="play('Creator (Music Box)')">Play</p>
 
                         </div>
@@ -190,8 +213,9 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="PrecipicePlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center"
-                                onclick="play('Precipice')">Play</p>
+                            <p id="PrecipicePlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center" onclick="play('Precipice')">
+                                Play</p>
 
                         </div>
                     </div>
@@ -215,8 +239,9 @@
                         </div>
 
                         <div class="text-center  justify-content-center d-flex my-2">
-                            <p id="RelicPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center"
-                                onclick="play('Relic')">Play</p>
+                            <p id="RelicPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center" onclick="play('Relic')">Play
+                            </p>
 
                         </div>
                     </div>
@@ -240,8 +265,8 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="5Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center"
-                                onclick="play('5')">Play</p>
+                            <p id="5Play" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay  text-center" onclick="play('5')">Play</p>
 
                         </div>
                     </div>
@@ -265,8 +290,9 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="OthersidePlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Otherside')">Play</p>
+                            <p id="OthersidePlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Otherside')">
+                                Play</p>
 
                         </div>
                     </div>
@@ -290,8 +316,9 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="PigstepPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Pigstep')">Play</p>
+                            <p id="PigstepPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Pigstep')">Play
+                            </p>
 
                         </div>
                     </div>
@@ -315,8 +342,8 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="CatPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Cat')">Play</p>
+                            <p id="CatPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Cat')">Play</p>
 
                         </div>
                     </div>
@@ -340,8 +367,9 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="ChirpPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Chirp')">Play</p>
+                            <p id="ChirpPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Chirp')">Play
+                            </p>
 
                         </div>
                     </div>
@@ -365,14 +393,15 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="BlocksPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Blocks')">Play</p>
+                            <p id="BlocksPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Blocks')">Play
+                            </p>
 
                         </div>
                     </div>
 
                 </div>
-                
+
                 <!-- Mall -->
                 <div class="col-2 musicCard rounded-1 pb-2 m-2">
 
@@ -390,8 +419,9 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="MallPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Mall')">Play</p>
+                            <p id="MallPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Mall')">Play
+                            </p>
 
                         </div>
                     </div>
@@ -415,8 +445,9 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="MellohiPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Mellohi')">Play</p>
+                            <p id="MellohiPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Mellohi')">Play
+                            </p>
 
                         </div>
                     </div>
@@ -440,8 +471,8 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="FarPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Far')">Play</p>
+                            <p id="FarPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Far')">Play</p>
 
                         </div>
                     </div>
@@ -465,8 +496,9 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="StalPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Stal')">Play</p>
+                            <p id="StalPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Stal')">Play
+                            </p>
 
                         </div>
                     </div>
@@ -490,8 +522,9 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="StradPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Strad')">Play</p>
+                            <p id="StradPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Strad')">Play
+                            </p>
 
                         </div>
                     </div>
@@ -515,8 +548,9 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="WaitPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Wait')">Play</p>
+                            <p id="WaitPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Wait')">Play
+                            </p>
 
                         </div>
                     </div>
@@ -540,8 +574,9 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="WardPlay"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('Ward')">Play</p>
+                            <p id="WardPlay" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('Ward')">Play
+                            </p>
 
                         </div>
                     </div>
@@ -565,8 +600,8 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="11Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('11')">Play</p>
+                            <p id="11Play" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('11')">Play</p>
 
                         </div>
                     </div>
@@ -589,8 +624,8 @@
                         </div>
 
                         <div class="text-center justify-content-center d-flex my-2">
-                            <p id="13Play"style="width: fit-content" class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center"
-                                onclick="play('13')">Play</p>
+                            <p id="13Play" style="width: fit-content"
+                                class="fs-4 px-3 m-0 rounded-1 musciCardPlay text-center" onclick="play('13')">Play</p>
 
                         </div>
                     </div>
