--- a/index.html
+++ b/index.html
@@ -135,28 +135,24 @@
 
 
 
-                        <div class="mx-1" onclick="loopSong()" id="loopingOff">
-                            <svg class="align-middle" xmlns="http://www.w3.org/2000/svg"
-                                width="1.8em" height="100%" fill="currentColor" class="bi bi-skip-backward-fill"
-                                viewBox="0 0 16 16">
+                        <div class="mx-2" onclick="loopSong()" id="loopingOff">
+                            <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
+                                fill="currentColor" viewBox="0 0 16 16">
                                 <path
                                     d="M11 5.466V4H5a4 4 0 0 0-3.584 5.777.5.5 0 1 1-.896.446A5 5 0 0 1 5 3h6V1.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384l-2.36 1.966a.25.25 0 0 1-.41-.192m3.81.086a.5.5 0 0 1 .67.225A5 5 0 0 1 11 13H5v1.466a.25.25 0 0 1-.41.192l-2.36-1.966a.25.25 0 0 1 0-.384l2.36-1.966a.25.25 0 0 1 .41.192V12h6a4 4 0 0 0 3.585-5.777.5.5 0 0 1 .225-.67Z" />
                             </svg>
-                            
+
 
                         </div>
 
-                        <div class="mx-1 d-none" onclick="loopSong()" id="loopingOn">
-                            <svg class="align-middle looping" xmlns="http://www.w3.org/2000/svg"
-                                width="1.8em" height="100%" fill="currentColor" class="bi bi-skip-backward-fill"
-                                viewBox="0 0 16 16">
+                        <div class="mx-2 d-none" onclick="loopSong()" id="loopingOn">
+                            <svg class="align-middle looping" xmlns="http://www.w3.org/2000/svg" width="1.8em"
+                                height="100%" fill="currentColor" viewBox="0 0 16 16">
                                 <path
                                     d="M 11 5.466 V 4 H 5 a 4 4 0 0 0 -3.584 5.777 A 0.5 0.5 0 1 1 0.52 10.223 A 5 5 0 0 1 5 3 h 6 V 1.534 a 0.25 0.25 0 0 1 0.41 -0.192 l 2.36 1.966 c 0.12 0.1 0.12 0.284 0 0.384 l -2.36 1.966 a 0.25 0.25 0 0 1 -0.41 -0.192 m 3.81 0.086 a 0.5 0.5 0 0 1 0.67 0.225 A 5 5 0 0 1 11 13 H 5 v 1.466 a 0.25 0.25 0 0 1 -0.41 0.192 l -2.36 -1.966 a 0.25 0.25 0 0 1 0 -0.384 l 2.36 -1.966 a 0.25 0.25 0 0 1 0.41 0.192 V 12 h 6 a 4 4 0 0 0 3.585 -5.777 A 0.5 0.5 0 0 1 14.81 5.553 Z M 7 7 L 9 7 A 0.5 0.5 0 0 1 9 9 l -2 0 A 0.5 0.5 0 0 1 7 7" />
                             </svg>
 
                         </div>
-
-
 
 
                     </div>
